[gd_scene load_steps=20 format=3 uid="uid://dmgj730nihsve"]

[ext_resource type="Script" uid="uid://d1bxee1l27t34" path="res://Scenes/TrainingProgram/parts/Cards/SCP/scp_card.gd" id="1_ppy2u"]
[ext_resource type="PackedScene" uid="uid://cggkdkq5crbw4" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/CardBody.tscn" id="9_50nll"]
[ext_resource type="PackedScene" uid="uid://b38bvj8mti387" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerImage.tscn" id="10_1pgoi"]
[ext_resource type="PackedScene" uid="uid://cntgsx4ms1bdd" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerResource.tscn" id="11_3cc3l"]
[ext_resource type="PackedScene" uid="uid://b51r528fxi561" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerTitle.tscn" id="11_y252v"]
[ext_resource type="PackedScene" uid="uid://ca1erh850s21g" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerContainmentInfo.tscn" id="13_bbv36"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qha80"]

[sub_resource type="ViewportTexture" id="ViewportTexture_50nll"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_w1mgs"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aydr2"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1y1b"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50nll"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1pgoi"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y252v"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3cc3l"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bbv36"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvhpf"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5kwt"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omwaq"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204, 0.21, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SCPCard" type="PanelContainer"]
offset_right = 275.0
offset_bottom = 425.0
pivot_offset = Vector2(125, 225)
theme_override_styles/panel = SubResource("StyleBoxEmpty_qha80")
script = ExtResource("1_ppy2u")
reveal = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("ViewportTexture_50nll")
stretch_mode = 4

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(275, 425)

[node name="CardBody" parent="SubViewport" instance=ExtResource("9_50nll")]
border_color = Color(0.204, 0.21, 0.5, 1)

[node name="TextureRect" parent="SubViewport/CardBody" index="0"]
texture = SubResource("ViewportTexture_w1mgs")

[node name="PanelContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_aydr2")

[node name="CardDrawerImage" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="0" instance=ExtResource("10_1pgoi")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a1y1b")
title = "IMAGE"
is_left_side = true
border_color = Color(0.204, 0.21, 0.5, 1)

[node name="CardDrawerDesignation" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="1" instance=ExtResource("11_y252v")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_50nll")
is_small = true
title = "DESIGNATION"
border_color = Color(0.204, 0.21, 0.5, 1)

[node name="CardDrawerNickname" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="2" instance=ExtResource("11_y252v")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1pgoi")
is_small = true
title = "NICKNAME"
border_color = Color(0.204, 0.21, 0.5, 1)

[node name="CardDrawerItemClass" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="3" instance=ExtResource("11_y252v")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y252v")
is_small = true
content = "KETER"
title = "ITEM CLASS"
border_color = Color(0.204, 0.21, 0.5, 1)

[node name="CardDrawerAssigned" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="4" instance=ExtResource("11_y252v")]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3cc3l")
is_small = true
content = "RESEARCHER NAME"
title = "ASSIGNED RESEARCHER"
border_color = Color(0.204, 0.21, 0.5, 1)

[node name="CardDrawerRewards" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="5" instance=ExtResource("11_3cc3l")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bbv36")
title = "AWARDED PER DAY"
is_left_side = true
border_color = Color(0.204, 0.21, 0.5, 1)

[node name="PanelContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Back" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_xvhpf")

[node name="CardDrawerRequired" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Back/PanelContainer/MarginContainer/BackDrawerContainer" index="0" instance=ExtResource("11_y252v")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v5kwt")
is_small = true
content = "BIOLOGIST / CRUEL"
title = "RESEARCHER PREFERENCES"
is_left_side = false
border_color = Color(0.204, 0.21, 0.5, 1)

[node name="CardDrawerContainmentInfo" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Back/PanelContainer/MarginContainer/BackDrawerContainer" index="1" instance=ExtResource("13_bbv36")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_omwaq")
title = "CONTAINMENT"
border_color = Color(0.204, 0.21, 0.5, 1)

[editable path="SubViewport/CardBody"]
